add JoinTeamByCode
